--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT = 5000
 MONGODB_URI = mongodb://0.0.0.0:27017/myshop
 SECRET_KEY = aiwduahihudiauhdiahdcjzhbc
+EMAIL_APP_PASSWORD = qjweugzihrsymirj
+EMAIL_NAME = quocthai5101999@gmail.com
+URL_SERVER = http://localhost:5000
