--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ EMAIL_APP_PASSWORD = qjweugzihrsymirj
 EMAIL_NAME = quocthai5101999@gmail.com
 URL_SERVER = http://localhost:5000
 LIMIT_PRODUCTS = 2
+CLOUDINARY_NAME= djtiultrg
+CLOUDINARY_KEY= 195985952364965
+CLOUDINARY_SECRET= dESth8bnkxcJmOmyS2UU0d3qEmA
