--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,4 @@ LIMIT_PRODUCTS = 2
 CLOUDINARY_NAME= djtiultrg
 CLOUDINARY_KEY= 195985952364965
 CLOUDINARY_SECRET= dESth8bnkxcJmOmyS2UU0d3qEmA
+CLIENT_URL = http://localhost:3000
